--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "jsx": "react-jsx",
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   },
   "include": [
     "src"
